styling and pdf wrap issues fixed

--- a/app/resources/css/skeleton.css
+++ b/app/resources/css/skeleton.css
@@ -49,11 +49,7 @@
   /*use: var(--text-font) */
 }
 
-
-
 /* browser normalization*/
-
-
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -227,7 +223,7 @@ h2 {
   line-height: 1.25;
   letter-spacing: -.1rem;
   font-family: Lato;
-  color: var(--main-color);
+  color: var(--main-color, blue);
 }
 
 h3 {
@@ -235,7 +231,7 @@ h3 {
   line-height: 1.3;
   letter-spacing: -.1rem;
   font-family: var(--title-font);
-  color: var(--main-color);
+  color: var(--main-color, blue);
 }
 
 h4 {
@@ -243,14 +239,15 @@ h4 {
   line-height: 1.35;
   letter-spacing: -.08rem;
   font-family: var(--title-font);
-  color: var(--main-color);
+  color: var(--main-color, blue);
 }
 
 h5 {
   font-size: 1.8rem;
   line-height: 1.5;
   letter-spacing: -.05rem;
-  font-family: var(--text-font);
+  font-family: var(--title-font);
+  color: var(--main-color, blue);
 }
 
 h6 {
@@ -360,22 +357,18 @@ a:hover {
   border-color: var(--accent-color, blue);
 }
 
-
-
-
 .deleteButton {
   display: ;
   line-height: 12px;
-       width: 18px;
-       font-size: 8pt;
-       font-family: tahoma;
-       margin-top: 1px;
-       margin-right: 2px;
-       position:absolute;
-       top:0;
-       right:0;
+  width: 18px;
+  font-size: 8pt;
+  font-family: tahoma;
+  margin-top: 1px;
+  margin-right: 2px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
-
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -405,6 +398,7 @@ textarea {
   padding-top: 3px;
   padding-bottom: 3px;
   box-sizing: border-box;
+  font-family: var(--text-font);
 }
 
 input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, textarea:focus, select:focus {
@@ -434,16 +428,14 @@ label>.label-body {
   font-weight: normal;
 }
 
-.checkbox input,
-.checkbox label {
+.checkbox input, .checkbox label {
   display: inline-block;
   margin-bottom: 0;
   vertical-align: middle;
   width: auto;
 }
 
-.radio input,
-.radio label {
+.radio input, .radio label {
   display: inline-block;
   margin-bottom: 0;
   vertical-align: middle;
@@ -542,7 +534,6 @@ input, textarea, select, fieldset {
   margin-bottom: 1rem;
   width: 100%;
 }
-
 
 pre, blockquote, dl, figure, table, p, ul, ol, form {
   margin-bottom: 0.5rem;
@@ -860,12 +851,12 @@ there.
   opacity: 1;
 }
 
-
 .tooltip2 {
   position: relative;
   display: inline-block;
   /* If you want dots under the hoverable text */
 }
+
 .tooltip2 .tooltiptext2 {
   visibility: hidden;
   width: 200px;
@@ -894,15 +885,13 @@ there.
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: transparent var(--main-color) transparent  transparent;
+  border-color: transparent var(--main-color) transparent transparent;
 }
 
 .tooltip2:hover .tooltiptext2 {
   visibility: visible;
   opacity: 1;
 }
-
-
 
 /* Popup container */
 
@@ -1005,7 +994,6 @@ there.
   border-color: var(--main-color);
   padding: 2px;
 }
-
 
 .modal {
   z-index: 3;
